# SystemwideEQ-MacOS

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
.matplotlib-cache/: fontlist-v390.json
equaliser/: __main__.py  runtime.py
equaliser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
equaliser/audio/: __init__.py  stream.py
equaliser/dsp/: __init__.py  filters.py  signals.py
equaliser/gui/: __init__.py  main_window.py
src/equaliser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/equaliser/gui/: __init__.py
tools/: test_dsp.py
