[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equaliser"
version = "0.1.0"
description = "System-wide parametric EQ for macOS routed through BlackHole"
authors = [{name = "Raaghava"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
equaliser-app = "equaliser.__main__:run"
